make some css changes

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: darkcyan;
-    color: aliceblue;
+    background-color: white;
+    color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     flex-direction: column;
